<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.flashbackmusicv000.SongListActivity"
    tools:showIn="@layout/activity_song_list">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#d77979"
        android:gravity="center"
        android:text="@string/songs"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/sortButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/flashSwitch"
        android:layout_marginBottom="470dp">
        <Button
            android:id="@+id/titleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     Title     "
            />

        <Button
            android:id="@+id/artistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     Artist     "
            />
        <Button
            android:id="@+id/albumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     Album    "
            />
        <Button
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   Favorite   "
            />
    </android.support.v7.widget.LinearLayoutCompat>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/sortButtons">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/constraintLayout">

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


    <TextView
        android:id="@+id/flashtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VIBE MODE"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/flashSwitch"
        app:layout_constraintVertical_bias=".97"
        app:layout_constraintHorizontal_bias=".4"
        />

    <Switch
        android:id="@+id/flashSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/flashtext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias=".97"

        />
</android.support.constraint.ConstraintLayout>
