...
    tools:context="com.android.flashbackmusicv000.AlbumQueue"
    tools:showIn="@layout/activity_album_queue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="ALBUMS"
        android:background="#d77979"
        android:textSize="20dp"
        android:gravity = "center"
        android:id="@+id/queueList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...

                android:shadowColor="#00ffffff"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>-->

            <Button
                android:id="@+id/album2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Love Is Everywhere"
                android:textAlignment="textStart"
                android:textSize="20dp"
                android:background="#e6e6e6"
                app:layout_constraintEnd_toStartOf="@+id/album1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
...
